// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateNameModal > Basic Modal States > should render basic modal with required props 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r0::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r0::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r0::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r0::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r2:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Basic Modal States > should render modal when closed 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=closed
    dir=ltr
    hidden=
    id=dialog::r8::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r8::positioner
    style=pointer-events: none; z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=closed
      dir=ltr
      hidden=
      id=dialog::r8::content
      role=dialog
      style=display: none;
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r8::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:ra:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Basic Modal States > should render modal with all optional props 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r4::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r4::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r4::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r4::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Display Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <p
              class=_text _text--paragraph pt-1 pb-3
              data-ods=text
            >
              Please enter a new display name for your account
            </p>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r6:
              >
                Display Name
              </label>
              <div
                class=_input
                data-invalid=true
              >
                <input
                  aria-busy=false
                  aria-describedby=update-name-modal-pattern-message
                  aria-invalid=true
                  aria-label=update-input
                  class=_input__field
                  data-invalid=true
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=John Doe
                />
              </div>
              <span
                class=_text _text--span text-right
                data-ods=text
                id=update-name-modal-pattern-message
                style=color: var(--ods-color-critical-400);
              >
                Only letters and spaces allowed
              </span>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Cancel
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            disabled=
            type=button
          >
            Update
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Combined States > should render modal with all features enabled 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r2c::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r2c::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r2c::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r2c::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Display Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <p
              class=_text _text--paragraph pt-1 pb-3
              data-ods=text
            >
              Please enter a new display name for your account. This name will be visible to other users.
            </p>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r2e:
              >
                Display Name
              </label>
              <div
                class=_input
                data-invalid=true
              >
                <input
                  aria-busy=false
                  aria-describedby=update-name-modal-pattern-message
                  aria-invalid=true
                  aria-label=update-input
                  class=_input__field
                  data-invalid=true
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=Current Display Name
                />
              </div>
              <span
                class=_text _text--span text-right
                data-ods=text
                id=update-name-modal-pattern-message
                style=color: var(--ods-color-critical-400);
              >
                2-50 characters, letters and spaces only
              </span>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Cancel Changes
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            disabled=
            type=button
          >
            Save New Name
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Combined States > should render modal with loading, error, and pattern validation 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r28::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r28::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r28::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r28::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_message _message--critical _message--default
              data-ods=message
            >
              <span
                class=_icon _icon--triangle-exclamation _message-icon
                data-ods=message-icon
                role=presentation
              />
              <div
                class=_message-body
                data-ods=message-body
              >
                L'erreur suivante est survenue : Name too short.
              </div>
              <button
                aria-label=Close
                class=_button _button--neutral _button--xs _button--ghost _message__close
                data-ods=button
                type=button
              >
                <span
                  class=_icon _icon--xmark
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
            <p
              class=_text _text--paragraph pt-1 pb-3
              data-ods=text
            >
              Please enter a valid name
            </p>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r2a:
              >
                Display Name
              </label>
              <div
                class=_input
                data-disabled=true
                data-invalid=true
              >
                <input
                  aria-busy=false
                  aria-describedby=update-name-modal-pattern-message
                  aria-invalid=true
                  aria-label=update-input
                  class=_input__field
                  data-invalid=true
                  data-ods=input
                  data-testid=update-name-modal-input
                  disabled=
                  id=update-name-modal-input
                  type=text
                  value=John
                />
              </div>
              <span
                class=_text _text--span text-right
                data-ods=text
                id=update-name-modal-pattern-message
                style=color: var(--ods-color-critical-400);
              >
                Minimum 5 characters, letters and spaces only
              </span>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            disabled=
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Custom Button Labels > should render modal with custom button labels 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r18::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r18::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r18::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r18::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r1a:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Go Back
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Save Changes
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Custom Button Labels > should render modal with custom cancel button only 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r1g::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r1g::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r1g::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r1g::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r1i:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Back
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Custom Button Labels > should render modal with custom confirm button only 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r1c::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r1c::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r1c::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r1c::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r1e:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Edge Cases > should render modal with empty default value 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r1k::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r1k::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r1k::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r1k::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r1m:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Edge Cases > should render modal with long text content 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r20::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r20::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r20::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r20::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            This is a very long headline that might wrap to multiple lines in the modal
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_message _message--critical _message--default
              data-ods=message
            >
              <span
                class=_icon _icon--triangle-exclamation _message-icon
                data-ods=message-icon
                role=presentation
              />
              <div
                class=_message-body
                data-ods=message-body
              >
                L'erreur suivante est survenue : This is a very long error message that might wrap to multiple lines in the error display area.
              </div>
              <button
                aria-label=Close
                class=_button _button--neutral _button--xs _button--ghost _message__close
                data-ods=button
                type=button
              >
                <span
                  class=_icon _icon--xmark
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
            <p
              class=_text _text--paragraph pt-1 pb-3
              data-ods=text
            >
              This is a very long description text that contains a lot of information about what the user should do when updating their display name. It might wrap to multiple lines and should be displayed properly in the modal.
            </p>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r22:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-describedby=update-name-modal-pattern-message
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=This is a very long default value that might exceed the input field width
                />
              </div>
              <span
                class=_text _text--span text-right
                data-ods=text
                id=update-name-modal-pattern-message
                style=color: var(--ods-color-text);
              >
                This is a very long pattern message that explains the validation rules in detail and might wrap to multiple lines
              </span>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Edge Cases > should render modal with null default value 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r1o::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r1o::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r1o::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r1o::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r1q:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Edge Cases > should render modal with special characters in text 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r24::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r24::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r24::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r24::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name & Details
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_message _message--critical _message--default
              data-ods=message
            >
              <span
                class=_icon _icon--triangle-exclamation _message-icon
                data-ods=message-icon
                role=presentation
              />
              <div
                class=_message-body
                data-ods=message-body
              >
                L'erreur suivante est survenue : Error: Invalid characters found!.
              </div>
              <button
                aria-label=Close
                class=_button _button--neutral _button--xs _button--ghost _message__close
                data-ods=button
                type=button
              >
                <span
                  class=_icon _icon--xmark
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
            <p
              class=_text _text--paragraph pt-1 pb-3
              data-ods=text
            >
              Please enter your name (required field)
            </p>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r26:
              >
                Name:
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-describedby=update-name-modal-pattern-message
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=John & Jane Doe
                />
              </div>
              <span
                class=_text _text--span text-right
                data-ods=text
                id=update-name-modal-pattern-message
                style=color: var(--ods-color-text);
              >
                Allowed: letters, numbers, & spaces
              </span>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Edge Cases > should render modal without onClose handler 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r1s::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r1s::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r1s::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r1s::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r1u:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Error States > should render modal with error and description 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::ro::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::ro::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::ro::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::ro::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_message _message--critical _message--default
              data-ods=message
            >
              <span
                class=_icon _icon--triangle-exclamation _message-icon
                data-ods=message-icon
                role=presentation
              />
              <div
                class=_message-body
                data-ods=message-body
              >
                L'erreur suivante est survenue : Invalid name format.
              </div>
              <button
                aria-label=Close
                class=_button _button--neutral _button--xs _button--ghost _message__close
                data-ods=button
                type=button
              >
                <span
                  class=_icon _icon--xmark
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
            <p
              class=_text _text--paragraph pt-1 pb-3
              data-ods=text
            >
              Please enter a new name
            </p>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:rq:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Error States > should render modal with error message 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::rk::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::rk::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::rk::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::rk::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_message _message--critical _message--default
              data-ods=message
            >
              <span
                class=_icon _icon--triangle-exclamation _message-icon
                data-ods=message-icon
                role=presentation
              />
              <div
                class=_message-body
                data-ods=message-body
              >
                L'erreur suivante est survenue : Name already exists.
              </div>
              <button
                aria-label=Close
                class=_button _button--neutral _button--xs _button--ghost _message__close
                data-ods=button
                type=button
              >
                <span
                  class=_icon _icon--xmark
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:rm:
              >
                Display Name
              </label>
              <div
                class=_input
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Loading States > should render modal in loading state 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::rc::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::rc::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::rc::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::rc::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:re:
              >
                Display Name
              </label>
              <div
                class=_input
                data-disabled=true
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  disabled=
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            disabled=
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Loading States > should render modal with loading state and default value 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::rg::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::rg::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::rg::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::rg::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:ri:
              >
                Display Name
              </label>
              <div
                class=_input
                data-disabled=true
              >
                <input
                  aria-busy=false
                  aria-label=update-input
                  class=_input__field
                  data-ods=input
                  data-testid=update-name-modal-input
                  disabled=
                  id=update-name-modal-input
                  type=text
                  value=Current Name
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            disabled=
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Pattern Validation States > should render modal with complex pattern validation 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r14::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r14::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r14::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r14::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r16:
              >
                Display Name
              </label>
              <div
                class=_input
                data-invalid=true
              >
                <input
                  aria-busy=false
                  aria-describedby=update-name-modal-pattern-message
                  aria-invalid=true
                  aria-label=update-input
                  class=_input__field
                  data-invalid=true
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
              <span
                class=_text _text--span text-right
                data-ods=text
                id=update-name-modal-pattern-message
                style=color: var(--ods-color-critical-400);
              >
                3-20 characters, letters, numbers, underscore, and dash only
              </span>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            disabled=
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Pattern Validation States > should render modal with pattern validation 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::rs::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::rs::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::rs::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::rs::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:ru:
              >
                Display Name
              </label>
              <div
                class=_input
                data-invalid=true
              >
                <input
                  aria-busy=false
                  aria-describedby=update-name-modal-pattern-message
                  aria-invalid=true
                  aria-label=update-input
                  class=_input__field
                  data-invalid=true
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=
                />
              </div>
              <span
                class=_text _text--span text-right
                data-ods=text
                id=update-name-modal-pattern-message
                style=color: var(--ods-color-critical-400);
              >
                Only letters and spaces allowed
              </span>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            disabled=
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateNameModal > Pattern Validation States > should render modal with pattern validation and default value 1`] = `
<body>
  <div />
  <div
    class=_modal-backdrop
    data-part=backdrop
    data-scope=dialog
    data-state=open
    dir=ltr
    id=dialog::r10::backdrop
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 2);
  />
  <div
    class=_modal-positioner
    data-part=positioner
    data-scope=dialog
    dir=ltr
    id=dialog::r10::positioner
    style=z-index: calc(var(--ods-theme-overlay-z-index) - 1);
  >
    <div
      aria-describedby=
      aria-labelledby=
      aria-modal=true
      class=_modal-content
      data-ods=modal-content
      data-part=content
      data-scope=dialog
      data-state=open
      dir=ltr
      id=dialog::r10::content
      role=dialog
      tabindex=-1
    >
      <div
        class=_modal-header _modal-header--information
      >
        <button
          aria-label=Close
          class=_button _button--neutral _button--xs _button--ghost _modal-header__close
          data-ods=button
          data-part=close-trigger
          data-scope=dialog
          dir=ltr
          id=dialog::r10::close
          type=button
        >
          <span
            class=_icon _icon--xmark
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
      <div
        class=_modal-body text-left
        data-ods=modal-body
      >
        <div
          class=flex items-center mb-4
        >
          <h4
            class=_text _text--heading-4 block mr-3 flex-1
            data-ods=text
          >
            Update Name
          </h4>
        </div>
        <div
          class=flex flex-col text-left
        >
          <div>
            <div
              class=_form-field
              data-ods=form-field
              role=group
            >
              <label
                class=_text _text--label _form-field-label
                data-ods=form-field-label
                for=update-name-modal-input
                id=:r12:
              >
                Display Name
              </label>
              <div
                class=_input
                data-invalid=true
              >
                <input
                  aria-busy=false
                  aria-describedby=update-name-modal-pattern-message
                  aria-invalid=true
                  aria-label=update-input
                  class=_input__field
                  data-invalid=true
                  data-ods=input
                  data-testid=update-name-modal-input
                  id=update-name-modal-input
                  type=text
                  value=John Doe
                />
              </div>
              <span
                class=_text _text--span text-right
                data-ods=text
                id=update-name-modal-pattern-message
                style=color: var(--ods-color-critical-400);
              >
                Only letters and spaces allowed
              </span>
            </div>
          </div>
        </div>
        <div
          class=flex justify-end flex-wrap gap-4
        >
          <button
            class=_button _button--primary _button--md _button--ghost mt-4
            data-ods=button
            data-testid=secondary-button
            type=button
          >
            Annuler
          </button>
          <button
            class=_button _button--primary _button--md _button--default mt-4
            data-ods=button
            data-testid=primary-button
            disabled=
            type=button
          >
            Confirmer
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
